<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/myprofile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/favouriteRest"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/ic_favourites"/>

        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs"/>

        <item
            android:id="@+id/logOut"
            android:title="Log out"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>