<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.FaqsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        android:textColor="#000"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a2"
        android:textColor="#000"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q3"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a3"
        android:textColor="#000"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q4"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a4"
        android:textColor="#000"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q5"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a5"
        android:textColor="#000"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>
</ScrollView>